--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -85,6 +85,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100vw;
+  position: fixed;
+  background-color: #05326f;
 }
 
 .App-link {
