--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,13 +16,14 @@
 
 .App-header {
   background-color: #05326f;
-  min-height: 13vh;
+  height: 13vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: space-between; */
   font-size: calc(10px + 2vmin);
   position: relative;
+  z-index: 2;
 }
 
 .Nav-text{
