--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -7,7 +7,7 @@
   display: flex;
   position: relative;
   overflow: hidden;
-  background-color: black;
+  background-color: #fff6f7;
   i{
     font-size: 2vw;
     color: #05326f
